add some function

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>project-demo</title>
+    <script src="https://cdn.bootcss.com/mui/3.7.1/js/mui.min.js"></script>
     <style>
     html,body{
       padding: 0;
